<resources>
    <!-- Main Strings -->
    <string name="app_name">TennisAndVolleyballQuiz</string>
    <string name="start_tennis">Тест по теннису</string>
    <string name="start_volleyball">Тест по воллейболу</string>
    <string name="info">Правила</string>
    <string name="info_textt">В этом приложении Вам предстоит проверить свои знания в таких видах спорта как Теннис и Волейбол,выберите вид спорта и отвечайте правильно на вопросы! В конце вы сможете увидеть ваш результат :)</string>
    <string name="next_level">Следущий вопрос</string>
    <string name="finish">Узнать результат</string>
    <string name="result1">Вы набрали</string>
    <string name="result2">баллов из 10</string>
    <string name="button">Ответ</string>
    <string name="back">Главное меню</string>
    <string name="info_text">В этом приложении Вам предстоит проверить свои знания в таких видах спорта как Теннис и Волейбол,выберите вид спорта и отвечайте правильно на вопросы! В конце вы сможете увидеть ваш результат :)</string>

    <!-- Volleyball Strings -->
    <string name="vq0">Сколько замен в одной партии разрешено проводить команде?</string>
    <string name="vq0A">4</string>
    <string name="vq0B">6</string>>
    <string name="vq0C">Не ограничено</string>
    <string name="vq1">Волейбол был изобретён в 1895 году, как он тогда назывался?</string>
    <string name="vq1A">Лакросс</string>
    <string name="vq1B">Волейбол</string>>
    <string name="vq1C">Минтонетт</string>
    <string name="vq2">Сколько по времени длится замена в волейбольном матче?</string>
    <string name="vq2A">Нет ограничений на это счёт</string>
    <string name="vq2B">15 секунд</string>>
    <string name="vq2C">30 секунд</string>
    <string name="vq3">Укажите аббревиатуру Международной федерации волейбола?</string>
    <string name="vq3A">ФИФА</string>
    <string name="vq3B">ФИВБ</string>>
    <string name="vq3C">ФИБА</string>
    <string name="vq4">Сколько длится тайм аут?</string>
    <string name="vq4A">30 секунд</string>
    <string name="vq4B">45 секунд</string>>
    <string name="vq4C">60 секунд</string>
    <string name="vq5">Какой высоты сетка для женского волейбола?</string>
    <string name="vq5A">2,24 м</string>
    <string name="vq5B">2,34 м</string>>
    <string name="vq5C">2,43 м</string>
    <string name="vq6">В пляжном волейболе по сколько человек играет с каждой стороне?</string>
    <string name="vq6A">По 2</string>
    <string name="vq6B">По 3</string>>
    <string name="vq6C">По 4</string>
    <string name="vq7">Размер волейбольной площадки равна...</string>
    <string name="vq7A">16 на 8 м</string>
    <string name="vq7B">18 на 8 м</string>>
    <string name="vq7C">18 на 9 м</string>
    <string name="vq8">Как называют игрока, выполняющего только защитные функции?</string>
    <string name="vq8A">Связующий</string>
    <string name="vq8B">Доигровщик</string>>
    <string name="vq8C">Либеро</string>
    <string name="vq9">Кто считается изобретателем волейбола?</string>
    <string name="vq9A">Поль Либо </string>
    <string name="vq9B">Уильям Дж. Морган</string>>
    <string name="vq9C">Рубен Акоста</string>

    <!-- Tennis Strings -->

    <string name="tq0">Где была сыграна первая игра, отдаленно напоминавшая теннис?</string>
    <string name="tq0A">Древняя Греция</string>
    <string name="tq0B">Древний Рим</string>>
    <string name="tq0C">Древний Египет</string>
    <string name="tq1">Какая скорость была у самой быстрой подачи среди женщин?</string>
    <string name="tq1A">250 км/ч</string>
    <string name="tq1B">205 км/ч</string>>
    <string name="tq1C">150 км/ч</string>
    <string name="tq2">Где зародился теннис?</string>
    <string name="tq2A">Италия</string>
    <string name="tq2B">Древний Египет</string>>
    <string name="tq2C">Англия</string>
    <string name="tq3">Сколько продолжалась самая длительная игра?</string>
    <string name="tq3A">26 часов</string>
    <string name="tq3B">15 часов</string>>
    <string name="tq3C">28 часов</string>
    <string name="tq4">Самая титулованная теннисистка среди женщин?</string>
    <string name="tq4A">Симона Халеп</string>
    <string name="tq4B">Маргарет Корт</string>>
    <string name="tq4C">Серена Уильямс</string>
    <string name="tq5">Кто первый в истории большого тенниса выиграл четыре мэйджора в течении одного сезона?</string>
    <string name="tq5A">Пит Сампрас</string>
    <string name="tq5B">Дон Бадж</string>>
    <string name="tq5C">Бьорн Борг</string>
    <string name="tq6">На каком покрытии матчи считаются самыми тяжелыми?</string>
    <string name="tq6A">Трава</string>
    <string name="tq6B">Хард</string>>
    <string name="tq6C">Грунт</string>
    <string name="tq7">Самая длинная беспроигрышная серия продолжалась...</string>
    <string name="tq7A">5 лет</string>
    <string name="tq7B">2 года</string>>
    <string name="tq7C">10 лет</string>
    <string name="tq8">Кто является лидером по числу сломанных ракеток?</string>
    <string name="tq8A">Джон Изнер</string>
    <string name="tq8B">Николя Маю</string>>
    <string name="tq8C">Марат Сафин</string>
    <string name="tq9">На какой высоте расположен самый высокий теннисный корт в мире?</string>
    <string name="tq9A">250 метров</string>
    <string name="tq9B">300 метров</string>>
    <string name="tq9C">350 метров</string>
</resources>