<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="#6E6702"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="@dimen/material_emphasis_high_type"
        android:scaleType="centerCrop"
        android:src="@drawable/bg4"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="300dp"
        android:alpha="@dimen/material_emphasis_high_type"
        android:src="@drawable/tandv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="СПОРТИВНАЯ ВИКТОРИНА"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonStartV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="196dp"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_black95_press_white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="@color/black"
            android:text="@string/start_volleyball"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_A"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_black95_press_white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="@color/black"
            android:text="@string/start_tennis"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/buttonStartV"
            app:layout_constraintStart_toStartOf="@+id/buttonStartV"
            app:layout_constraintTop_toBottomOf="@+id/buttonStartV" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_black95_press_white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="@color/black"
            android:text="@string/info"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/buttonStartV"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonStartV"
            app:layout_constraintTop_toBottomOf="@+id/btn_A" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>