<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tennisQuiz">

    <ImageView
        android:id="@+id/tennisBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:alpha="@dimen/material_emphasis_medium"
        android:scaleType="centerCrop"
        android:src="@drawable/bgv2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/q_img"
            android:layout_width="432dp"
            android:layout_height="264dp"
            android:layout_marginTop="100dp"
            android:alpha="@dimen/material_emphasis_medium"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            android:src="@drawable/q"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/q"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/tq0"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/q_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/q_img"
            app:layout_constraintVertical_bias="0.55" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonA2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="256dp"
            android:background="@drawable/button_stroke_answer_press"
            android:paddingLeft="20dp"
            android:paddingTop="2dp"
            android:paddingRight="20dp"
            android:paddingBottom="2dp"
            android:text="@string/button"
            android:textColor="@color/black95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonB2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_stroke_answer_press"
            android:paddingLeft="20dp"
            android:paddingTop="2dp"
            android:paddingRight="20dp"
            android:paddingBottom="2dp"
            android:text="@string/button"
            android:textColor="@color/black95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonA2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonA2"
            app:layout_constraintTop_toBottomOf="@+id/buttonA2"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonC2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_stroke_answer_press"
            android:paddingLeft="20dp"
            android:paddingTop="2dp"
            android:paddingRight="20dp"
            android:paddingBottom="2dp"
            android:text="@string/button"
            android:textColor="@color/black95"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonA2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonA2"
            app:layout_constraintTop_toBottomOf="@+id/buttonB2"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_next2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:background="@drawable/button_stroke_black95_press_white"
            android:backgroundTint="@color/design_default_color_primary_variant"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:shadowColor="@color/black"
            android:text="@string/next_level"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonA2"
            app:layout_constraintStart_toStartOf="@+id/buttonA2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>